# r2dliu-website

./: .eslintrc.js  .gitignore  README.md  app.arc  asset-manifest.json  index.html  package-lock.json  package.json  precache-manifest.fb8dea41f0671c31eecbeca424b06b83.js  pyproject.toml  remix.config.js  sandbox-seed.js  service-worker.js  tsconfig.json
.github/workflows/: deploy.yml
api/: .env.example  README.md  __init__.py  app.yaml  configurations.py  main.py  manage.py  pyproject.toml  requirements.txt  run.py  serverless.yaml
api/.serverless/: requirements.txt
api/r2dliu/: asgi.py  main.py  schema.py  settings.py  urls.py  wsgi.py
app/: entry.client.tsx  entry.server.tsx  root.tsx
app/data/: articles.tsx
app/helpers/: breakpoints.tsx  gtags.client.ts
app/routes/: [robots.txt].jsx  __canvas.tsx  index.module.css  index.module.css.map  index.module.scss  index.tsx
app/styles/: index.css  index.css.map  index.scss  mixins.scss
scripts/: init-db.sh
server/: index.js.map
src/: App.js  Routes.jsx
static/css/: main.a76ac6b1.chunk.css  main.a76ac6b1.chunk.css.map
static/js/: main.5d2d3f6e.chunk.js  main.5d2d3f6e.chunk.js.map  runtime~main.7e5c19c4.js  (+1 more)
web/: .cta.json  .dockerignore  .env.example  .eslintrc  .eslintrc.cjs  .eslintrc.json  .prettierignore  .prettierrc  Dockerfile  README.md  app.arc  cloudbuild.yaml  codegen.ts  deploy.sh  nitro.config.ts  package-lock.json  package.json  plugin-remix.js  remix.config.js  tsconfig.json  tslint.json  vite.config.ts
web-new/: .cta.json  package-lock.json  package.json  vite.config.ts
(+287 files in other folders)
