[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "django>=5.0.2",
    "graphene-django>=3.2.0",
    "psycopg>=3.1.18",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
